fixed the contact bar and lwork section boxes layout issue

--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -1,5 +1,5 @@
 * {
-    background-color: #DDDEEC;
+    /* background-color: #DDDEEC; */
     box-sizing: border-box;
 }
 
@@ -7,13 +7,13 @@
     --border: 10px #1e90ff
 } */
 
+body {
+    background-color: #DDDEEC;
+}
 .parent {
     /* white-space:nowrap; */
     /* display: inline-block; */
-    background-color: aquamarine;
-    /* add width */
-    /* background-image: url(./Cloud.jpeg); */
-
+    background-color: #B4D8DF;
     display: flex;
     align-items: baseline;
     justify-content: space-between;
@@ -21,19 +21,9 @@
 
 }
 
-.child h1 {
-    /* display:inline-block; */
-    /* background-color: inherit; */
-    /* align-items: baseline;*/
-
-}
-    
-
 
 .top  {
     float: right;
-
- 
 
 }
 
@@ -131,28 +121,43 @@ main {
 }
 
 
-.boxes {
+/* .boxes {
     display:flex;
     flex-wrap: wrap;
 
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
     /* width:100%; */
     /* flex-direction: column; */
     /* align-items: center; */
 
+
+
+
+.part1 {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 60%;
+}
+
+.part2 {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width:60%
 }
 
 .card {
     border-style: solid;
     border-width: 10px;
     border-color: #B0B3E7;
-
-    /* padding: 10px; */
+    justify-content: space-around;
+    margin: 2.5%;
     flex: 1 0 0;
-    width: 20%;
-    /* flex-direction: row; */
+    width: 25%;
 
 }
+
 
 
 .card img {
@@ -173,9 +178,12 @@ main {
 .Horizontal {
     overflow: auto;
     white-space: nowrap;
-    width: 50%;
-    margin-left: 100px;
-    border-left: thick solid;
+    width: 100%;
+    margin-left: 80px;
+    margin-right:10px;
+    border-left: thick solid ;
+    /* padding: 10px; */
+    /* border-left: thick solid; */
     
 }
 
@@ -183,7 +191,9 @@ div.Horizontal a {
     display: inline-block;
     color:black;
     text-align:center;
-    padding: 10px;
+    margin-right: 100px;
+    padding: 25px;
+
 
 }
 
@@ -194,16 +204,16 @@ div.Horizontal a:hover{
 }
 
 
-
 /*WHEN I resize the page or view the site on various screens and devices
 THEN I am presented with a responsive layout that adapts to my viewport */ 
 
 @media screen and (max-width: 992px) {
-    /*flex from horizontal to vertical */
+
 
     .card {
         width:50%; 
     }
+   
 }
 
 @media screen and (min-width :320px) and (max-width:480px) {
